2008-06-16  Per Bothner  <per@bothner.com>

	* XQuery.java (typeMap): Add "anyType" and "untyped".

2008-01-14  Per Bothner  <per@bothner.com>

	* XQParser.java (parseFLWRInner): Don't call setTypeExp with a null
	type - that causes problems later.

2008-01-06  Per Bothner  <per@bothner.com>

	* XQResolveNames.java: Clean up to remove warnings with some compilers.

2007-04-23  Per Bothner  <per@bothner.com>

	* XQResolveNames.java (walkApplyExp): Fix copy/paste error for return
	type of COLLECTION_BUILTIN.

	* XQParser.java (parse): Use new method of iterating through
	ModuleManager modules.

2007-02-17  Per Bothner  <per@bothner.com>

	* XQResolveNames.java (walkReferenceExp): Call NameLookup.lookup
	with correct namespace code.

2007-02-16  Per Bothner  <per@bothner.com>

	* XQParser.java: Add missing intern for default namespace uri.

2007-01-19  Per Bothner  <per@bothner.com>

	* XQResolveNames.java (walkStatements, resolveModule): Remove
	pointless no-longer-erv-true isNamespaceDecl invocations.

2007-01-17  Per Bothner  <per@bothner.com>

	* XQParser.java (parseTypeSwitch): Fix parsing of default case
	with variable declaration.

	* XQParser.java (parsePathExpr): Use new rootDocument node for '/'
	non-infix operator to coerce to document-node.

	* XQParser.java (baseURI): Change type to Path.
	(setStaticBaseUri, fixupStaticBaseUri): New methods.
	(getStaticBaseUri): Try Environment, then LineBufferedReader,
	then currentPath.  Then coerce to an absolute URI.
	(resolveAgainstBaseUri): Making absolute is no longer done here.

	* XQuery.java (typeMap): use new XDataType.anyAtomicType.
	* XQParser.java (parseItemType): Explicitly test
	for XDataType.anyAtomicType, which is now different from item().
	Use SingletonType.getInstance(); for item().

	* XQuery.java (initXQuery): Change implementation class of node-name.

	* XQParser.java (resolveAgainstBaseUri): New method.
	(parse): Use it to resolve 'default collation'.